--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jogo de Aposta Simples</title>
+  <title>GANHE 5X MAIS!</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
       background: #111;
       color: #fff;
-      padding: 30px;
+      padding: 20px;
     }
-    input {
-      padding: 10px;
+    input, button {
+      padding: 12px;
       margin: 10px;
       font-size: 1rem;
       display: block;
       margin-left: auto;
       margin-right: auto;
+      width: 80%;
+      max-width: 400px;
     }
     button {
-      padding: 12px 20px;
-      font-size: 1.2rem;
       background-color: #28a745;
       color: white;
       border: none;
@@ -54,6 +54,7 @@
       padding: 15px;
       border-radius: 10px;
       margin-bottom: 20px;
+      font-size: 1rem;
     }
     .pix-simulador {
       background: #333;
@@ -68,10 +69,24 @@
     .whatsapp-btn:hover {
       background-color: #1ebe5b;
     }
+    @media (max-width: 600px) {
+      body {
+        padding: 15px;
+      }
+      input, button {
+        width: 90%;
+      }
+      .regras {
+        font-size: 0.9rem;
+      }
+      .sorteando {
+        font-size: 1.5rem;
+      }
+    }
   </style>
 </head>
 <body>
-  <h1>🎲 Jogo de Aposta</h1>
+  <h1>🎲 GANHE 5X MAIS!</h1>
 
   <div class="regras">
     <h3>📜 Como Jogar</h3>
@@ -178,3 +193,4 @@
   </script>
 </body>
 </html>
+
